--- a/share/2048.html
+++ b/share/2048.html
@@ -57,7 +57,7 @@
             color: white;
             border-radius: min(1.2vw, 1.2vh);
             margin: 1px;
-            font-size: min(4vw, 4vh);
+            font-size: 2.8vw;
         }
         #score-div::before, #best-div::before {
             position: absolute;
@@ -182,8 +182,16 @@
         .tile-2, .tile-4 {
             color: rgb(101, 110, 119);
         }
-        .tile-8, .tile-16, .tile-32, .tile-64, .tile-128, .tile-256, .tile-512, .tile-1024, .tile-2048 {
+        .tile-8, .tile-16, .tile-32, .tile-64, .tile-128,
+        .tile-256, .tile-512, .tile-1024, .tile-2048, .tile-4096,
+        .tile-8192, .tile-16384, .tile-32768, .tile-65536 {
             color: rgb(242, 246, 249);
+        }
+        .tile-1024, .tile-2048, .tile-4096, .tile-8192 {
+            font-size: min(7vw, 7vh);
+        }
+        .tile-16384, .tile-32768, .tile-65536 {
+            font-size: min(6vw, 6vh);
         }
         .tile-2 {
             background-color: rgb(238, 228, 218);
@@ -217,6 +225,21 @@
         }
         .tile-2048 {
             background-color: rgb(237, 194, 46);
+        }
+        .tile-4096 {
+            background-color: rgb(237, 191, 29);
+        }
+        .tile-8192 {
+            background-color: rgb(237, 188, 12);
+        }
+        .tile-16384 {
+            background-color: rgb(237, 182, 0);
+        }
+        .tile-32768 {
+            background-color: rgb(237, 175, 0);
+        }
+        .tile-65536 {
+            background: linear-gradient(to right bottom, rgb(246, 98, 61), rgb(237, 194, 46));
         }
 
         .pos-0-0{
@@ -303,6 +326,9 @@
                 height: min(100vw, 80vh);
                 width: min(100vw, 80vh);
             }
+            #score-div, #best-div, #game-head a {
+                font-size: 3vh;
+            }
         }
     </style>
 </head>
@@ -346,7 +372,12 @@
                 <div class="tile tile-256 pos-1-3">256</div>
                 <div class="tile tile-512 pos-2-0">512</div>
                 <div class="tile tile-1024 pos-2-1">1024</div>
-                <div class="tile tile-2048 pos-2-2">2048</div> -->
+                <div class="tile tile-2048 pos-2-2">2048</div>
+                <div class="tile tile-4096 pos-2-3">4096</div>
+                <div class="tile tile-8192 pos-3-0">8192</div>
+                <div class="tile tile-16384 pos-3-1">16384</div>
+                <div class="tile tile-32768 pos-3-2">32768</div>
+                <div class="tile tile-65536 pos-3-3">65536</div> -->
             </div>
             <div class="lose-div">
                 <p>Game over!</p>
@@ -388,6 +419,7 @@
             let timeoutFunc = null;
             let timeoutId = null;
 
+            // $(".tile").addClass("tile-show"); return;
             const tableHistoryLimit = Infinity;
             const localStorage_key = "kirksud_2048";
             let storageData = localStorage.getItem(localStorage_key);
@@ -406,10 +438,25 @@
                 }
             }
 
+            $(document).on("keyup", function(evt) {
+                if (evt.code === "Escape") {
+                    undo();
+                }
+            });
+
             $(document).on("keydown", function(evt) {
-                const dirKeyCode = ["ArrowUp", "ArrowRight", "ArrowDown", "ArrowLeft"];
+                const dirKeyCode = [
+                    ["ArrowUp", "ArrowRight", "ArrowDown", "ArrowLeft"],
+                    ["KeyW", "KeyD", "KeyS", "KeyA"],
+                    ["KeyI", "KeyL", "KeyK", "KeyJ"]];
                 // const dirKeyCode = ["Numpad4", "Numpad8", "Numpad6", "Numpad2"];
-                let dir = dirKeyCode.indexOf(evt.code);
+                let dir;
+                for (let kc of dirKeyCode) {
+                    dir = kc.indexOf(evt.code);
+                    if (dir !== -1) {
+                        break;
+                    }
+                }
                 if (dir === -1) {
                     return;
                 }
