share/2048.html v0.5 comment out try again button

--- a/share/2048.html
+++ b/share/2048.html
@@ -381,7 +381,7 @@
             </div>
             <div class="lose-div">
                 <p>Game over!</p>
-                <a>Try again</a>
+                <!-- <a>Try again</a> -->
             </div>
         </div>
     </div>
@@ -462,7 +462,7 @@
                 }
                 doMove(dir);
             });
-            $(".lose-div a").on("click", restart);
+            // $(".lose-div a").on("click", restart);
             $("#new-btn").on("click", restart);
             $("#undo-btn").on("click", function() {
                 undo();
