share/dtts.html: use pointerdown to avoid mobile 300ms delay

--- a/share/dtts.html
+++ b/share/dtts.html
@@ -385,7 +385,7 @@
                 }
                 press();
             });
-            $(document).on("mousedown", press);
+            $(document).on("pointerdown", press);
 
             // scene X*Y = 20*29
             function setCharPos(x, y) {
